--- a/tailwind/components.json
+++ b/tailwind/components.json
@@ -4,8 +4,8 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "src/index.css",
+    "config": "tailwind.config.mjs",
+    "css": "src/styles/global.css",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
