--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,6 +3,11 @@ name: Build
 on:
   push:
     branches: [ "main" ]
+  schedule:
+    - cron: "*/10 * * * *"
+  workflow_dispatch:
+
+permissions: write-all
 
 jobs:
   build:
@@ -22,3 +27,12 @@ jobs:
         pnpm install
         pnpm build
       working-directory: web
+
+    - name: Deploy
+      continue-on-error: true
+      uses: cloudflare/wrangler-action@v3
+      with:
+        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        command: pages deploy ./web/dist --project-name=example
+        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
