--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        command: pages deploy ./web/dist --project-name=example
+        command: pages deploy ./web/dist --project-name=pkgs.pkgforge.dev
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
