--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,11 @@ jobs:
         pnpm build
       working-directory: web
 
-    - name: Deploy
-      continue-on-error: true
-      uses: cloudflare/wrangler-action@v3
-      with:
-        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        command: pages deploy ./web/dist --project-name=pkgs.pkgforge.dev
-        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Deploy
+    #   continue-on-error: true
+    #   uses: cloudflare/wrangler-action@v3
+    #   with:
+    #     apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+    #     accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+    #     command: pages deploy ./web/dist --project-name=pkgs.pkgforge.dev
+    #     gitHubToken: ${{ secrets.GITHUB_TOKEN }}
