--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,8 @@
-name: Build
+name: Mock Build
 
 on:
   push:
     branches: [ "main" ]
-  schedule:
-    - cron: "*/10 * * * *"
   workflow_dispatch:
 
 permissions: write-all
