--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: 📦 Mock Build 📦
+name: 📦 Build 📦
 
 on:
   push:
@@ -9,8 +9,8 @@ permissions: write-all
 
 jobs:
   build:
-    name: Build Application
-    runs-on: ubuntu-latest
+    name: Build Site
+    runs-on: macos-14
 
     steps:
       - name: Checkout
@@ -28,16 +28,37 @@ jobs:
         working-directory: web
 
       - name: Upload site
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          compression-level: 9
+          name: thisisabuild
           path: ./web/dist/
 
-      - name: Upload doc
-        uses: actions/upload-artifact@v4
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    name: Deploy Site
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
         with:
-          compression-level: 9
-          path: ./web/src/
+          name: thisisabuild
+          path: ./build
+
+      - name: Upload
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./build
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
     # - name: Deploy
     #   continue-on-error: true
