--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions: write-all
 jobs:
   build:
     name: Build Site
-    runs-on: ubuntu-latest
+    runs-on: macos-14
 
     steps:
       - name: Checkout
@@ -28,7 +28,7 @@ jobs:
         working-directory: web
 
       - name: Upload site
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: thisisabuild
           path: ./web/dist/
