--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ permissions: write-all
 jobs:
   build:
     name: Build Site
-    runs-on: macos-14
+    runs-on: ubuntu-latest
+    cancel-timeout-minutes: 60
 
     steps:
       - name: Checkout
