--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache .astro file
-        uses: actions/cache@v4
+        uses: actions/cache/restore@v4
         with:
           key: astro-cache
           path: ./web/.astro
@@ -41,6 +41,12 @@ jobs:
         with:
           name: thisisabuild
           path: ./web/dist/
+
+      - name: Post Cache .astro file
+        uses: actions/cache/save@v4
+        with:
+          key: astro-cache
+          path: ./web/.astro
 
   deploy:
     environment:
