--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.1.0",
+    "astro-react-swc": "github:ahqsoftwares/astro-react-swc",
     "@astrojs/tailwind": "^5.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
