--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           path: ./web/.astro
 
       - name: Delete outdated cache
+        continue-on-error: true
         uses: actions/github-script@v7
         with:
           script: |
