Include hidden files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Upload site
         uses: actions/upload-artifact@v4
         with:
+          include-hidden-files: true
           name: thisisabuild
           path: ./web/dist/
 
