--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Upload site
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           include-hidden-files: true
           name: thisisabuild
