--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ permissions: write-all
 jobs:
   build:
     name: Build Site
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     cancel-timeout-minutes: 60
 
     steps:
