--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ permissions: write-all
 jobs:
   build:
     name: Build Site
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     cancel-timeout-minutes: 60
 
     steps:
@@ -21,14 +21,14 @@ jobs:
 
       - name: Use Node.js
         uses: actions/setup-node@v4
+        with:
+          node-version: 22.9.0
 
       - name: Install Deps & Build
-        shell: pwsh
         run: |
           npm i -g pnpm
           pnpm install
 
-          $env:CI = "false"
           pnpm build
         working-directory: web
 
